# printf-wrap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: example.rs  larger_of.rs  lib.rs  printf_arg_impls.rs  tests.rs  validate.rs
