[package]
name = "printf-wrap"
version = "0.1.0"
description = "Types and functions for safely wrapping C functions with printf(3)-style format strings and varargs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libc = { version = "^0.2.0", default-features = false }

[features]
default = [ "std" ]
std = []
