[package]
name = "printf-wrap"
version = "0.1.0"
description = "Types and functions for safely wrapping C functions with printf(3)-style format strings and varargs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libc = { version = "^0.2.0", default-features = false }

[features]
default = ["std"]
# use the `std` crate:
std = []
# use the nightly-only #[doc(cfg(...))]:
doccfg = []

[package.metadata.docs.rs]
features = ["std", "doccfg"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-unknown-freebsd", "x86_64-unknown-illumos"]
