[package]
name = "printf-wrap"
version = "0.1.0"
description = "Types and functions for safely wrapping C functions with printf(3)-style format strings and varargs"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/BlackCAT-CubeSat/printf-wrap"
documentation = "https://docs.rs/printf-wrap"
readme = "README.md"
categories = ["development-tools::ffi", "no-std"]
keywords = ["printf", "ffi", "c", "no_std"]
rust-version = "1.64.0"

[dependencies]
libc = { version = "^0.2.0", default-features = false }

[features]
# use the nightly-only #[doc(cfg(...))]:
doccfg = []
# include the "example" module
example = []

[package.metadata.docs.rs]
features = ["example", "doccfg"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-unknown-freebsd", "x86_64-unknown-illumos"]
